# OOP_lab3

./: .gitignore
lab1/: CMakeLists.txt  arch.txt  main.cpp  mono.txt  start.md
lab1/.devcontainer/: .devcontainer.json  Dockerfile
lab1/include/: number_speller.h
lab1/src/: spell_number.cpp
lab1/test/: tests.cpp
lab2/: CMakeLists.txt  main.cpp  start.md
lab2/.devcontainer/: .devcontainer.json
lab2/include/: Six.h
lab2/test/: tests.cpp
lab3/: .gitignore  CMakeLists.txt  main.cpp  start.md
lab3/.devcontainer/: .devcontainer.json  Dockerfile
lab3/include/: Figure.h  FigureArray.h  Octagon.h  Square.h  Triangle.h
lab3/src/: Figure.cpp  FigureArray.cpp  Octagon.cpp  Square.cpp  Triangle.cpp  info.txt
lab3/test/: tests.cpp
